--- a/project.config.json
+++ b/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "wx04627cb9c26c3648",
-	"projectname": "shop-demo1",
+	"appid": "wx55867d9fdde70162",
+	"projectname": "%E6%AC%A2%E4%B9%90%E4%BD%8F",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
